--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
+    "just-range": "^2.1.0",
+    "lodash.difference": "^4.5.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-dimensions": "^1.3.1",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "soundfont-player": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
